--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
-    "mongoose": "^4.6.5"
+    "mongoose": "^4.6.5",
+    "multer": "^1.2.0"
   }
 }
